--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -3,100 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <title>JS + CSS Clock</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script defer src="main.js"></script>
   </head>
   <body>
-    <div class="title">Sihyun's Clock</div>
+    <header>Javascript CLOCK</header>
+    <div class="clock_letter"></div>
     <div class="clock">
       <div class="clock-face">
+        <div class="clock_center"></div>
         <div class="hand hour-hand"></div>
         <div class="hand min-hand"></div>
         <div class="hand second-hand"></div>
       </div>
     </div>
-
-    <style>
-      html {
-        background: #018ded url(https://unsplash.it/1500/1000?image=881&blur=5);
-        background-size: cover;
-        font-family: "helvetica neue";
-        text-align: center;
-        font-size: 10px;
-      }
-
-      body {
-        margin: 0;
-        font-size: 2rem;
-        display: flex;
-        flex: 1;
-        min-height: 100vh;
-        align-items: center;
-      }
-
-      .title {
-        position: absolute;
-        width: 100%;
-        top: 15%;
-        margin: 0px auto;
-        text-align: center;
-        font-weight: bold;
-        font-size: 24px;
-        color: black;
-      }
-      .clock {
-        width: 30rem;
-        height: 30rem;
-        border: 20px solid white;
-        border-radius: 50%; /* 원 만들기  */
-        margin: 50px auto; /* 사각형*/
-        position: relative;
-        padding: 2rem;
-        box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #efefef,
-          inset 0 0 10px black, 0 0 10px rgba(0, 0, 0, 0.2);
-      }
-
-      .clock-face {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        transform: translateY(
-          -3px
-        ); /* account for the height of the clock hands */
-      }
-
-      .hand {
-        position: absolute;
-        background-color: black;
-        top: 50%;
-        width: 50%;
-        height: 6px;
-        transform-origin: 100%;
-        transform: rotate(90deg);
-        transition: all 0.05s;
-        transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
-      }
-    </style>
-
-    <script>
-      const secondhand = document.querySelector(".second-hand");
-      const minhand = document.querySelector(".min-hand");
-      const hourhand = document.querySelector(".hour-hand");
-
-      function setDate() {
-        const now = new Date();
-        const seconds = now.getSeconds();
-        const minutes = now.getMinutes();
-        const hours = now.getHours();
-
-        const secDegrees = ((6 * seconds) % 360) + 90;
-        const minDegrees = ((6 * minutes) % 360) + 90;
-        const hourDegrees = ((30 * hours) % 360) + 90;
-
-        secondhand.style.transform = `rotate(${secDegrees}deg)`;
-        minhand.style.transform = `rotate(${minDegrees}deg)`;
-        hourhand.style.transform = `rotate(${hourDegrees}deg)`;
-      }
-
-      setInterval(setDate, 1000);
-    </script>
   </body>
 </html>
