--- a/04 - Array Cardio Day 1/index-FINISHED.html
+++ b/04 - Array Cardio Day 1/index-FINISHED.html
@@ -6,24 +6,12 @@
   </head>
   <body>
     <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
-    <style>
-      * {
-        margin: 0px;
-      }
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        font-size: 50px;
-      }
-    </style>
     <script>
       // Get your shorts on - this is an array workout!
       // ## Array Cardio Day 1
 
       // Some data we can work with
-
+      const audio = document.querySelector(audio[`data-key=${key}`]);
       const inventors = [
         { first: "Albert", last: "Einstein", year: 1879, passed: 1955 },
         { first: "Isaac", last: "Newton", year: 1643, passed: 1727 },
@@ -77,7 +65,7 @@
         "Billings, Josh",
         "Biondo, Frank",
         "Birrell, Augustine",
-        "Black, Elk",
+        "Black Elk",
         "Blair, Robert",
         "Blair, Tony",
         "Blake, William",
@@ -86,66 +74,47 @@
       // Array.prototype.filter()
       // 1. Filter the list of inventors for those who were born in the 1500's
 
-      let result = inventors.filter(
+      const fifteen = inventors.filter(
         (inventor) => inventor.year >= 1500 && inventor.year < 1600
       );
-      console.table(result);
+
+      console.table(fifteen);
 
       // Array.prototype.map()
-      // 2. Give us an array of the inventors first and last names
-      result = inventors.map(
+      // 2. Give us an array of the inventor first and last names
+      const fullNames = inventors.map(
         (inventor) => `${inventor.first} ${inventor.last}`
       );
-      console.log(result);
+      console.log(fullNames);
 
       // Array.prototype.sort()
       // 3. Sort the inventors by birthdate, oldest to youngest
+      // const ordered = inventors.sort(function(a, b) {
+      //   if(a.year > b.year) {
+      //     return 1;
+      //   } else {
+      //     return -1;
+      //   }
+      // });
+
       const ordered = inventors.sort((a, b) => (a.year > b.year ? 1 : -1));
       console.table(ordered);
 
       // Array.prototype.reduce()
-      // 4. How many years did all the inventors live all together?
-      const sum = inventors.reduce(
-        (accumulator, inventor, index, array) =>
-          accumulator + inventor.passed - inventor.year,
-        0
-      );
-      console.log(sum);
-
+      // 4. How many years did all the inventors live?
       const totalYears = inventors.reduce((total, inventor) => {
         return total + (inventor.passed - inventor.year);
       }, 0);
 
+      console.log(totalYears);
+
       // 5. Sort the inventors by years lived
-      const ordered2 = inventors.sort((a, b) =>
-        a.passed - a.year < b.passed - b.year ? 1 : -1
-      );
-      console.table(ordered2);
-
-      // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
-      // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
-      // 7. sort Exercise
-      // Sort the people alphabetically by last name
-
-      // 8. Reduce Exercise
-      // Sum up the instances of each of these
-      const data = [
-        "car",
-        "car",
-        "truck",
-        "truck",
-        "bike",
-        "walk",
-        "car",
-        "van",
-        "bike",
-        "walk",
-        "car",
-        "van",
-        "car",
-        "truck",
-      ];
+      const oldest = inventors.sort(function (a, b) {
+        const lastInventor = a.passed - a.year;
+        const nextInventor = b.passed - b.year;
+        return lastInventor > nextInventor ? -1 : 1;
+      });
+      console.table(oldest);
     </script>
   </body>
 </html>
